2011-04-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.3.0

	- Now voxels in each branch are sorted, so that we can walk from
	one termination point to the other without "jumps".

2011-04-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.2.2

	- Add bifurcation points to every branch they terminate. This way,
	it will be easier to sort the points in the branch, as we will
	have 2 termination points (leaf/bifurcation or
	bifurcation/bifurcation) in every branch.

2011-04-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.2.1

	- Fix bug. Instead of adding the bifurcation voxel, we were adding
	its neighbour.

	- Add input arguments so that besides the skeleton, we can pass
	the original segmentation. Now, the whole segmentation and not
	only the skeleton will get labelled.

	* Add matlab/test/veins-tree.mat, matlab/test/veins-tree.mha:

	- To test the new functionality in skeleton_label().

	* FiltersToolbox/scinrrd_squeeze.m: v0.1.1

	- Fix bug. Remove dummy dimension also when nrrd.data has only 3
	dimensions. If you have a single slice, Seg3D saves it with a
	3-dimensional matrix (with a first dummy dimension), but 4
	elements for the nrrd.axis. So this function was working wrong for
	1-slice volumes.

	* Add PointToolbox/graph_nn.m: v0.1.0

	- GRAPH_NN Nearest neighbours from a subset of nodes in a graph to
	another subset.

2011-04-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add test/veins-tree-skeleton.mat, test/veins-tree-skeleton.mha:

	- A 2D segmentation that looks like a tree of veins (with a
	cycle), to test skeleton_label().

	* Add test directory.

	- Directory to keep data and scripts for tests.

	* Add FiltersToolbox/skeleton_label.m: v0.1.0

	- SKELETON_LABEL Give each branch of a skeleton a different label.

2011-04-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/seg2dmat.m: v0.2.0
